Bug 178952 - error when changing the database path
Summary: error when changing the database path
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Setup-Database (other bugs)
Version First Reported In: 0.10.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-28 12:06 UTC by S. Burmeister
Modified: 2022-01-21 22:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 7.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2008-12-28 12:06:15 UTC
Version:           0.10 beta6 (using Devel)
OS:                Linux
Installed from:    Compiled sources

If digikam starts the first time, it asks for the path to the collection and the path to the database file. If one changes the path to the database file afterwards, via digikam's settings and clicking OK, it displays a notification that the database could not be found. I think this happens, because the database is not moved to the new path. If this is supposed how it works, changing the path should at least trigger a new scan.

A minor issue is that the notification text includes some "%1", i.e. some string is not replaced correctly.
Comment 1 Marcel Wiesweg 2009-01-14 09:46:00 UTC
SVN commit 910772 by mwiesweg:

Implement the behavior when the user changes the database folder in setup:
- if the new folder has no existing database file, copy the current database to this place automatically
- if there is an existing file, ask if it shall be used, or if the current file should be copied

BUG: 178952

 M  +71 -0     albummanager.cpp  
 M  +7 -0      albummanager.h  
 M  +1 -2      digikamapp.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=910772