Implement the behavior when the user changes the database folder in setup: - if the new folder has no existing database file, copy the current database to this place automatically - if there is an existing file, ask if it shall be used, or if the current file should be copied

BUG: 178952

svn path=/trunk/extragear/graphics/digikam/; revision=910772